# SPPR-kurs-project

./: CMakeLists.txt  README.md  kp.cpp  kp.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
